[metadata]
name = custolint
version = 0.0.3dev6
description = Another custom linter layer
long_description = file: README.rst
#, CHANGELOG.rst, LICENSE.rst
license = MIT License
keywords = ["static code analysis", "linter", "python", "lint", "coverage", "flake8"]
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

requires-python = ">=3.8"

[options]
package_dir=
    =src
packages = find:
install_requires =
    bash==0.6
    isort==5.10.1

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pylint
    coverage
    flake8
deploy_to_pip =
    twine
    build

[options.entry_points]
console_scripts =
    custolint = custolint.cli:cli

[options.package_data]
* = README.rst

[isort]
known_typing=typing
sections=FUTURE,TYPING,STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER

[mypy]
strict = True
show_error_codes = True

[mypy-bash.*]
ignore_missing_imports = True

[flake8]
ignore =
    E501 # line too long
    I100 # Import statements are in the wrong order

