[metadata]
name = custolint
version = 0.0.8
description = Another custom linter layer
long_description = file: README.rst
    , LICENSE.rst

license = MIT License
keywords =
    static code analysis
    linter
    python
    lint
    coverage
    flake8
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

requires-python = ">=3.8"

[options]
package_dir=
    =src
packages = find:
install_requires =
    bash==0.6
    isort==5.10.1

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pylint
    coverage
    flake8
    mypy
    Sphinx==5.2.3

deploy_to_pip =
    twine
    build

[options.entry_points]
console_scripts =
    custolint = custolint.cli:cli

[options.package_data]
* = README.rst

[isort]
known_typing=typing
sections=FUTURE,TYPING,STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER

[mypy]
strict = True
show_error_codes = True

[mypy-bash.*]
ignore_missing_imports = True

[flake8]
per-file-ignores =
    # line too long
    tests/*.py: E501,

ignore =
    # I100 Import statements are in the wrong order
    # replaced by isort auto-format
    I100,
    # I202 Additional newline in a group of imports
    # replaced by isort auto-format
    I202,
    # I201 Missing newline between import groups
    # replaced by isort auto-format
    I201,
    # E501 line too long
    # replaced by pylint
    E501,

[coverage:run]
source = src/custolint
branch = True

[coverage:report]
show_missing = True

[pylint.FORMAT]
# Regexp for a line that is allowed to be longer than the limit.
ignore-long-lines=^\s*(# )?<?https?://\S+>?$|INFO:
